--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <title>Cronônometro</title>
     <link rel="icon" href="Imagens\cronometro_icone.png">
     <link rel="stylesheet" type="text/css" href="index.css">
+    <link href="http://fonts.cdnfonts.com/css/ds-digital" rel="stylesheet">
     <meta charset="utf-8">
   </head>
   <body>
-    <h1 id="titulo">Cronômetro ⏱️</h1>
+    <h1 id="titulo">Cronometro</h1>
     <div id="tempo">
-        <span id="horas">0</span><span>:</span><span id="minutos">0</span><span>:</span><span id="segundos">0</span>
+        <span id="horas" class="tempos">00</span><span class="tempos">:</span><span id="minutos" class="tempos">00</span><span class="tempos">:</span><span id="segundos" class="tempos">00</span>
     </div>
     <div>
     <button id="botaoiniciar" class="botoes">INICIAR</button>
